--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -130,16 +130,37 @@ body {
 	.img-border{
 		border:1px solid @border-gray;
 	}
-
-	.below-text {
+   @media screen and (min-device-width:531px) and (max-device-width: 1002px) { 
+		  .below-text {
 		
-		overflow: hidden;
-		text-overflow:ellipsis;
-		display:block;
-	    position: relative;
-	    top: -190px;
-	    left: 170px;
-	}
+			overflow: hidden;
+			text-overflow:ellipsis;
+			display:block;
+		    position: relative;
+		    top: -190px;
+		    left: 170px;
+		    max-width: 270px;
+	    }
+   }
+    @media screen and (min-device-width:442px) and (max-device-width: 530px) { 
+		  .below-text {
+		
+			overflow: hidden;
+			text-overflow:ellipsis;
+			display:block;
+		    position: relative;
+		    top: -190px;
+		    left: 170px;
+		    max-width: 170px;
+	    }
+   }
+   @media screen and (min-device-width:442px) and (max-device-width: 441px) { 
+		  .below-text {
+		
+			display: none
+	    }
+   }
+	
 	p.share-font {
 	    margin-top: 20px;
 	    margin-left: 20px;
