--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -61,18 +61,53 @@ body .bold {
   font-weight: bolder;
   color: #000000;
 }
-body .text-alignn {
-  position: relative;
-  top: -30px;
-  left: 70px;
-  font-size: 14px;
-  font-weight: bold;
-  color: #3b5998;
+@media screen and (min-device-width: 439px) and (max-device-width: 10000px) {
+  body .text-alignn {
+    position: relative;
+    top: -30px;
+    left: 70px;
+    font-size: 14px;
+    font-weight: bold;
+    color: #3b5998;
+  }
 }
-body .share-share {
-  position: relative;
-  top: -115px;
-  border-top: 1px solid #e9eaed;
+@media screen and (min-device-width: 0px) and (max-device-width: 438px) {
+  body .text-alignn {
+    position: relative;
+    top: -19px;
+    left: 70px;
+    font-size: 14px;
+    font-weight: bold;
+    color: #3b5998;
+  }
+}
+@media screen and (min-device-width: 540px) and (max-device-width: 10000px) {
+  body .share-share {
+    position: relative;
+    top: -115px;
+    border-top: 1px solid #e9eaed;
+  }
+}
+@media screen and (min-device-width: 431px) and (max-device-width: 539px) {
+  body .share-share {
+    position: relative;
+    top: -145px;
+    border-top: 1px solid #e9eaed;
+  }
+}
+@media screen and (min-device-width: 385px) and (max-device-width: 430px) {
+  body .share-share {
+    position: relative;
+    top: -185px;
+    border-top: 1px solid #e9eaed;
+  }
+}
+@media screen and (min-device-width: 0px) and (max-device-width: 384px) {
+  body .share-share {
+    position: relative;
+    top: -15px;
+    border-top: 1px solid #e9eaed;
+  }
 }
 body .con-main.side-main {
   max-height: 310px;
@@ -138,7 +173,7 @@ body .img-border {
     display: block;
   }
 }
-@media screen and (min-device-width: 364px) and (max-device-width: 429px) {
+@media screen and (min-device-width: 384px) and (max-device-width: 429px) {
   body .below-text {
     overflow: hidden;
     text-overflow: ellipsis;
@@ -149,7 +184,7 @@ body .img-border {
     display: block;
   }
 }
-@media screen and (min-device-width: 0px) and (max-device-width: 363px) {
+@media screen and (min-device-width: 0px) and (max-device-width: 383px) {
   body .below-text {
     display: none;
   }
